# falcon_ggml_server

./: README.md  build-info.h
Crow/: CMakeLists.txt
examples/falcon/: CMakeLists.txt  falcon_main.cpp
